--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -113,7 +113,7 @@
           },
           {
             key: {
-              text: "Address"
+              text: "Business Address"
             },
             value: {
               html: agentAddressDetails
@@ -143,7 +143,7 @@
           },
           {
             key: {
-              text: "Address"
+              text: "Business address"
             },
             value: {
               html: farmerAddressDetails
