--- a/app/templates/500.njk
+++ b/app/templates/500.njk
@@ -15,8 +15,8 @@
           <p>Contact the RPA Helpline if you have any questions and follow the options for the Farming Transformation Fund scheme.</p>
           <p >Telephone: 03000 200 301<br/><br/>
             Monday to Friday, 9am to 5pm (except public holidays)<br/>
-            <a class="govuk-link" target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
-          <p>Email: <a class="govuk-link" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+            <a class="govuk-link" target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
+          <p>Email: <a class="govuk-link" rel="noopener noreferrer" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
         </div>
       </div>
     </div>
