--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -23,10 +23,10 @@
           <h1 class="govuk-heading-m">Telephone</h1>
           <p>Telephone: 03000 200 301</p> 
           <p>Monday to Friday, 9am to 5pm (except public holidays)</p> 
-          <p><a class="govuk-link" target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges (opens in a new tab)</a></p>
+          <p><a class="govuk-link" target="_blank" href="https://www.gov.uk/call-charges" rel="noopener noreferrer">Find out about call charges (opens in a new tab)</a></p>
 
           <h1 class="govuk-heading-m">Email</h1>
-          <p><a class="govuk-link" target="_blank" href="mailto:ftf@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+          <p><a class="govuk-link" target="_blank" href="mailto:ftf@rpa.gov.uk" rel="noopener noreferrer">FTF@rpa.gov.uk</a></p>
           <br/>
 
           <h1 class="govuk-heading-l">What happens next</h1>
