--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -53,8 +53,8 @@
       <p>If you have any problems with the service, contact the RPA.</p>
       <p>Telephone: <b>03000 200 301</b></p>
       <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
-      <p><a class="govuk-link" target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
-      <p>Email: <a class="govuk-link" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+      <p><a class="govuk-link" target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
+      <p>Email: <a class="govuk-link" rel="noopener noreferrer" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
     </div>
   </div>
 {% endblock %}
