--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -50,7 +50,9 @@
 
         <h2 class="govuk-heading-m">Contact details</h2><br/>
         {{ govukInput(inputEmail) }}
-        {{ govukInput(inputEmailConfirmation) }}
+        {% if inputEmailConfirmation %}
+          {{ govukInput(inputEmailConfirmation) }}
+        {% endif %}
         {{ govukInput(inputMobile) }}
         {{ govukInput(inputLandline) }}
         <h2 class="govuk-heading-m">Address</h2><br/>
