--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -3,6 +3,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
   Confirm and send - {{siteTitle}}
@@ -29,24 +30,30 @@
 %}
 
 {% block content %}
-
-  <div class="govuk-grid-row govuk-body">
+  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-body">
-      <h1 class="govuk-heading-l">Confirm and send</h1>
-      <ul class="govuk-list">
-        <li>I confirm that, to the best of my knowledge, the details I have provided are correct.</li>
-        <li>I understand the score was based on the answers I provided.</li>
-        <li>I am aware the information I submit will be checked.</li>
-        <li>I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about the application.</li>
+      <h1 class="govuk-heading-l">{{copyprovider(1)}}</h1>
+      <p class="govuk-body">{{copyprovider(2)}}</p>
+      <p class="govuk-body">{{copyprovider(3)}}</p>
+      <p class="govuk-body">{{copyprovider(4)}}</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>{{copyprovider(5)}}</li>
+        <li>{{copyprovider(6)}}</li>
       </ul>
+      <p class="govuk-body">{{copyprovider(7)}}</p>
+      <p class="govuk-body">{{copyprovider(8)}}</p>
     </div>
 
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(checkboxConfirmOptional) }}
+        {{ govukWarningText({
+          text: copyprovider(10),
+          iconFallbackText: "Warning"
+        }) }}
         {{ govukButton({
-          text: "Confirm and send",
+          text: copyprovider(11),
           attributes: {id: "btnConfirmSend"}
         }) }}
       </form>
