--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -50,8 +50,8 @@
 
         <h2 class="govuk-heading-m">Contact details</h2><br/>
         {{ govukInput(inputEmail) }}
-        {% if inputEmailConfirmation %}
-          {{ govukInput(inputEmailConfirmation) }}
+        {% if inputEmailConfirm %}
+          {{ govukInput(inputEmailConfirm) }}
         {% endif %}
         {{ govukInput(inputMobile) }}
         {{ govukInput(inputLandline) }}
