--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -29,7 +29,7 @@
       <p>{{copyprovider(2)}}</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>{{copyprovider(3)}}</li>
-        <li>{{copyprovider(4)}}/li>
+        <li>{{copyprovider(4)}}</li>
       </ul>
       <h2 class="govuk-heading-m">{{copyprovider(5)}}</h2>
       <p>{{copyprovider(6)}}</p>
