--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -31,7 +31,7 @@
         <label class="govuk-label">
           You may be able to apply for a grant of up to £{{calculatedGrant}},
           based on the estimated cost of £{{projectCost}}.
-        </label>
+        </label><br/>
         {{ govukWarningText({
             text: "There’s no guarantee the project will receive a grant.",
             iconFallbackText: "Warning"
