--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -21,7 +21,7 @@
   <div class="govuk-body">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Check your details</h1>
+        <h1 class="govuk-heading-l">Check your details</h1>
         
       {% if businessDetails %}
 
