--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -19,17 +19,17 @@
           <p>If you do not get an email within 72 hours, please contact RPA helpline and follow the options for Farming Transformation Fund scheme:</p> 
           <br/>
 
-          <h1 class="govuk-heading-l">RPA helpline</h1>
-          <h1 class="govuk-heading-m">Telephone</h1>
+          <h1 class="govuk-heading-m">RPA helpline</h1>
+          <h1 class="govuk-heading-s">Telephone</h1>
           <p>Telephone: 03000 200 301</p> 
           <p>Monday to Friday, 9am to 5pm (except public holidays)</p> 
           <p><a class="govuk-link" target="_blank" href="https://www.gov.uk/call-charges" rel="noopener noreferrer">Find out about call charges (opens in a new tab)</a></p>
 
-          <h1 class="govuk-heading-m">Email</h1>
+          <h1 class="govuk-heading-s">Email</h1>
           <p><a class="govuk-link" target="_blank" href="mailto:ftf@rpa.gov.uk" rel="noopener noreferrer">FTF@rpa.gov.uk</a></p>
           <br/>
 
-          <h1 class="govuk-heading-l">What happens next</h1>
+          <h1 class="govuk-heading-m">What happens next</h1>
           <ol>
             <li>
               RPA will be in touch when the full application period opens.
