score warning text has been added.

--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -3,6 +3,8 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "./components/macro.njk" import crumbToken %}
+{% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
+
 {% block pageTitle %}
   Score results - {{siteTitle}}
 {% endblock %}
@@ -55,6 +57,12 @@
             </div>
           </dl>
         </div>
+        <br/>
+        {{ govukWarningText({
+          text: "The likelihood of a full application being successful will also depend on the number and value of applications we receive.",
+          iconFallbackText: "Warning"
+        }) }}
+        <p class="govuk-body">Value for money will be assessed alongside the funding priorities at full application stage and this may impact your overall project score.</p>
       </div>
     </div>
 
