--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -41,7 +41,8 @@
         }) }}
       </form>
     </div>
-    {{ sideBar("Eligibility","You must have applied for planning permission before you submit a full application.<br/> Any planning permission must be in place by 31 December 2022.",
+    {{ sideBar("Eligibility","You must have secured planning permission before you submit a full application.\n 
+                              Any planning permission must be in place by 31 January 2023. ",
     []) }}
   </div>
 {% endblock %}
