--- a/app/templates/abstraction-licence.njk
+++ b/app/templates/abstraction-licence.njk
@@ -41,7 +41,8 @@
         }) }}
       </form>
     </div>
-    {{ sideBar("Eligibility","Any abstraction licences or variations must be in place by 31 December 2022.",
+    {{ sideBar("Eligibility","You must have secured abstraction licences or variations before you submit a full application.\n
+                              Any abstraction licences or variations must be in place by 31 January 2023.",
     []) }}
   </div>
 {% endblock %}
