--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -32,9 +32,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">{{pageHeader}}</h1>
-    <span id="project-items-hint" class="govuk-hint">
-        Enter the farmer and farm business details
-      </span><br/>
+      {{ govukRadios(input) }}
       <form method="POST" action="{{formActionPage}}" autocomplete="on" novalidate>
         <input type="hidden" name="crumb" value="{{crumb}}" />
         <h2 class="govuk-heading-m">Name</h2><br/>
