--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -10,7 +10,7 @@
 {% block pageTitle %}
   {% if errorList %}
     Error: 
-  {% endif %} Does the project will have planning permission? - {{siteTitle}}
+  {% endif %} Does the project have planning permission? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
