--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -32,7 +32,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">{{pageHeader}}</h1>
-      <span class="govuk-hint">{{ hint.text }}</span>
+    <div class="govuk-hint">{{ hint.text }}</div>
       <form method="POST" action="{{formActionPage}}" autocomplete="on" novalidate>
         <input type="hidden" name="crumb" value="{{crumb}}" />
         <h2 class="govuk-heading-m">Name</h2><br/>
