--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -149,12 +149,28 @@
               html: farmerAddressDetails
             }
           },
+            {
+            key: {
+              text: "postcode"
+            },
+            value: {
+              html: farmerPostcode
+            }
+          },
           {
             key: {
               text: "Project postcode"
             },
             value: {
               html: farmerProjectPostcode
+            }
+          },
+              {
+            key: {
+              text: "Business postcode"
+            },
+            value: {
+              html: farmerBusinessPostcode
             }
           }
         ] %}
