fix/water-bugfix

--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -47,7 +47,7 @@
       <h3 class="govuk-heading-s">{{copyprovider(20)}}</h3>
       <p>{{copyprovider(21)}}</p>
       <p>{{copyprovider(22)}}</p>
-      <p><a class="govuk-link" target="_blank" href="https://www.gov.uk/call-charges">{{copyprovider(23)}}</a> {{copyprovider(24)}}</p>
+      <p><a class="govuk-link" target="_blank" href="https://www.gov.uk/call-charges">{{copyprovider(23)}} {{copyprovider(24)}}</a></p>
       <h3 class="govuk-heading-s">{{copyprovider(25)}}</h3>
       <p><a class="govuk-link" href="mailto:FTF@rpa.gov.uk">{{copyprovider(26)}}</a></p>
     </div>
