Project cost - Iteration 3 (Design review changes)

--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -41,7 +41,7 @@
         }) }}
       </form>
     </div>
-          {{ sideBar("Items selected","",projectItemsList) }}
+          {{ sideBar("Items selected","",projectItemsList,"h2") }}
       </ul>
     </div>
   </div>
