Project Cost Ineligible page  (Design review changes)

--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -23,8 +23,8 @@
       <p class="govuk-body">
         {{ messageContent | safe}}
       </p>
-      {% if insertText %}  
-        {{ govukInsetText(insertText) }}
+      {% if insetText %}  
+        {{ govukInsetText(insetText) }}
       {% endif %}
       {% if details %}      
         {{ govukDetails(details) }}
