Change a heading's text

--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -78,7 +78,7 @@
             <th scope="col" class="govuk-table__header govuk-!-width-one-third">Answers</th>
             <th scope="col" class="govuk-table__header ">Score</th>
             <th scope="col" class="govuk-table__header govuk-!-width-one-third">Funding priorities</th>
-            <th scope="col" class="govuk-table__header">Change Answers</th>
+            <th scope="col" class="govuk-table__header">Change answers</th>
           </tr>
         </thead>
 
