Correct heading tags

--- a/app/templates/tenancy.njk
+++ b/app/templates/tenancy.njk
@@ -41,6 +41,6 @@
         }) }}
       </form>
     </div>
-    {{ sideBar("Eligibility","You must own the land or have a tenancy in place for 5 years after the final grant payment.",[]) }}
+    {{ sideBar("Eligibility","You must own the land or have a tenancy in place for 5 years after the final grant payment.",[], "h2") }}
   </div>
 {% endblock %}
