Change more subheadings

--- a/app/templates/project-summary.njk
+++ b/app/templates/project-summary.njk
@@ -41,6 +41,6 @@
       </form>
     </div>
     {{ sideBar("Funding priorities","RPA wants to fund projects that:",
-    ["improve productivity","improve the environment","improve water sustainability"]) }}
+    ["improve productivity","improve the environment","improve water sustainability"], "h2") }}
   </div>
 {% endblock %}
