More headings corrected

--- a/app/templates/legal-status.njk
+++ b/app/templates/legal-status.njk
@@ -40,6 +40,6 @@
         }) }}
       </form>
     </div>
-    {{ sideBar("Eligibility","Public organisations and local authorities cannot apply for this grant.",null) }}
+    {{ sideBar("Eligibility","Public organisations and local authorities cannot apply for this grant.",null, 'h2') }}
   </div>
 {% endblock %}
