--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -49,28 +49,57 @@
 
     </div>
 
-    {{ 
-      multiSideBar([
-        {
-          heading:"Funding priorities",
-          content: [
-            {
-              para:"RPA wants to fund projects that:",
-              items:[
-                "improve the environment",
-                "improve water sustainability"
-              ]
-            },
-            { 
-              para:"RPA will not fund projects where water is supplied by:",
-              items:[
-                "summer water surface abstraction",
-                "mains"
-              ]
-            }
-          ]
-        }
-      ])
-    }}
+    {% if currentlyIrrigating %}
+          {{ 
+            multiSideBar([
+              {
+                heading:"Funding priorities",
+                content: [
+                  {
+                    para:"RPA wants to fund projects that:",
+                    items:[
+                      "improve the environment",
+                      "improve water sustainability"
+                    ]
+                  },
+                  { 
+                    para:"RPA will not fund projects where water is supplied by:",
+                    items:[
+                      "summer water surface abstraction",
+                      "mains"
+                    ]
+                  }
+                ]
+              }
+            ], 'h3')
+          }}
+
+        {% else %}
+          {{ 
+            multiSideBar([
+              {
+                heading:"Funding priorities",
+                content: [
+                  {
+                    para:"RPA wants to fund projects that:",
+                    items:[
+                      "improve the environment",
+                      "improve water sustainability"
+                    ]
+                  },
+                  { 
+                    para:"RPA will not fund projects where water is supplied by:",
+                    items:[
+                      "summer water surface abstraction",
+                      "mains"
+                    ]
+                  }
+                ]
+              }
+            ], 'h2')
+          }}
+        {% endif %}
+
+    
   </div>
 {% endblock %}
