--- a/app/templates/components/macro.njk
+++ b/app/templates/components/macro.njk
@@ -27,31 +27,35 @@
   </div>
 {% endmacro %}
 
-{% macro multiSideBar(sideBars, heading_tag='h3') %}
+{% macro multiSideBar(sideBars) %}
   <div class="govuk-grid-column-one-third  govuk-!-padding-top-4 govuk-body">
     <hr class="sideBarColor"/>
-
-    {% for sidebar in sideBars %}
-    {% if heading_tag === "h3" %}
-      <h3 class="govuk-heading-s" id="subsection-title">
-        {{ sidebar.heading }}
-      </h3>
-    {% elseif heading_tag === 'h2' %}
-      <h2 class="govuk-heading-s" id="subsection-title">
-        {{ sidebar.heading }}
-      </h2>
+    {% set sideBarSubHeadingTag = 'h2' %}
+    {% if sideBars.mainHeading %}
+      {% set sideBarSubHeadingTag = 'h3' %}
+      <h2 class="govuk-heading-m" id="subsection-title-{{ sideBars.mainHeading.replace(' ', '-') | lower }}">{{ sideBars.mainHeading }}</h2>
     {% endif %}
-
+    {% for sidebar in sideBars.values %}
+      {% if sidebar.heading %}
+      <{{ sideBarSubHeadingTag }} class="govuk-heading-s" id="subsection-title-{{ sidebar.heading.replace(' ', '-') | lower }}">
+        {{ sidebar.heading }}
+      </{{ sideBarSubHeadingTag }}>
+      {% endif %}
       {% for content in sidebar.content %}
-        <p>{{content.para  | striptags(true) | escape | nl2br }}</p>
+        <p>{{ content.para  | striptags(true) | escape | nl2br }}</p>
         <ul class="govuk-list govuk-list--bullet">
           {% for item in content.items %}
             <li>{{ item }}</li>
           {% endfor %}
         </ul>
+        {% if content.additionalPara %}
+          <p>{{ content.additionalPara  | striptags(true) | escape | nl2br }}</p>
+        {% endif %}
       {% endfor %}
     {% endfor %}
-
+    {% if sideBars.details %}
+      {{ govukDetails(sideBars.details) }}
+    {% endif %}
   </div>
 {% endmacro %}
 
