--- a/app/templates/page.njk
+++ b/app/templates/page.njk
@@ -95,6 +95,15 @@
           {% endif %}
 
           <div class="govuk-!-padding-top-5">
+            {%if key === 'collaboration' %}
+            {{'I am collaboration'}}
+                {% set buttonText = 'Get your score' %}
+                {% set diaplaySecondryBtn = false %}
+              {% elif reachedCheckDetails %}
+                {% set diaplaySecondryBtn = true %}
+                {% set secButtonText = 'Back to details' %}
+            {% endif %}
+
             {% set buttonText = 'Continue' %}
             {% set secButtonText = 'Back to score' %}
 
