Fix check-details back button

--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -12,7 +12,7 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink,
+    href: backUrl,
 	  attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
