--- a/app/templates/page.njk
+++ b/app/templates/page.njk
@@ -97,7 +97,7 @@ conditionalButtons %}
           {{ govukWarningText(warning) }}
         {% endif %}
 
-        <div class="govuk-!-padding-top-5">
+        <div>
           {% set buttonText = 'Continue' %}
           {% set secButtonText = 'Back to score' %}
 
