back to score fix

--- a/app/templates/components/macro.njk
+++ b/app/templates/components/macro.njk
@@ -100,7 +100,7 @@
         classes: "govuk-button--secondary",
         text: secButtonText,
         name: "results",
-        value: "results",
+        value: secButtonText,
         attributes: {id: buttonText.split(' ').join('-')}
       })
     }}
