--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -27,8 +27,8 @@
         {{ messageContent | safe}}
       </p>
 
-      {% if insetText %} 
-        {{ govukInsetText(insetText) }}
+      {% if insertText %} 
+        {{ govukInsetText(insertText) }}
       {% endif %}
 
       {% if details %} 
