--- a/app/templates/irrigation-system.njk
+++ b/app/templates/irrigation-system.njk
@@ -62,10 +62,8 @@
         {% else %}
           {{ 
             sideBar(
-              "Funding priorities","RPA wants to fund projects that:",
-              [
-                "improve the environment","improve water sustainability"
-              ], 'h2'
+              "Funding priorities","RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones.\n
+              For example, moving from rain gun to trickle.",[]
             )
           }}
 
