--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -81,17 +81,11 @@
                 heading:"Funding priorities",
                 content: [
                   {
-                    para:"RPA wants to fund projects that:",
+                    para:"RPA wants to fund projects that use more sustainable water sources, such as:",
                     items:[
-                      "improve the environment",
-                      "improve water sustainability"
-                    ]
-                  },
-                  { 
-                    para:"RPA will not fund projects where water is supplied by:",
-                    items:[
-                      "summer water surface abstraction",
-                      "mains"
+                      "winter peak-flow abstraction",
+                      "rain water harvesting",
+                      "bore hole/aquifer"
                     ]
                   }
                 ]
