--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -56,14 +56,15 @@
                 heading:"Funding priorities",
                 content: [
                   {
-                    para:"RPA wants to fund projects that:",
+                    para:"RPA wants to fund projects that use more sustainable water sources, such as:",
                     items:[
-                      "improve the environment",
-                      "improve water sustainability"
+                      "winter peak-flow abstraction",
+                      "rain water harvesting",
+                      "bore hole/aquifer"
                     ]
                   },
                   { 
-                    para:"RPA will not fund projects where water is supplied by:",
+                    para:"RPA will not fund projects that increase water usage from:",
                     items:[
                       "summer water surface abstraction",
                       "mains"
