irrigation-system side bar heading

--- a/app/templates/irrigation-system.njk
+++ b/app/templates/irrigation-system.njk
@@ -62,8 +62,9 @@
         {% else %}
           {{ 
             sideBar(
-              "Funding priorities","RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones.\n
-              For example, moving from rain gun to trickle.",[]
+              "Funding priorities",
+              "RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones.\n
+              For example, moving from rain gun to trickle.",[],'h2'
             )
           }}
 
