--- a/app/templates/change-summer-abstraction.njk
+++ b/app/templates/change-summer-abstraction.njk
@@ -1,7 +1,7 @@
 {% extends '.layout.njk' %}
 
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-{% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
@@ -36,16 +36,16 @@
         {{ crumbToken(crumb)}}
 
         {% if summerOnly %}
-            {{ govukCheckboxes(summerInput) }}
+            {{ govukRadios(summerInput) }}
             {{ govukInput(hiddenInputMains) }}
 
         {% elif mainsOnly %}
-            {{ govukCheckboxes(mainsInput) }}
+            {{ govukRadios(mainsInput) }}
             {{ govukInput(hiddenInputSummer) }}
 
         {% else %}
-            {{ govukCheckboxes(summerInput) }}
-            {{ govukCheckboxes(mainsInput) }}
+            {{ govukRadios(summerInput) }}
+            {{ govukRadios(mainsInput) }}
 
         {% endif %}
         
