updated summer abstraction

--- a/app/templates/change-summer-abstraction.njk
+++ b/app/templates/change-summer-abstraction.njk
@@ -46,7 +46,7 @@
       </form>
     </div>
     
-    {{ sideBar("Eligibility", "Your project cannot increase water use from summer water surface abstraction or mains. \n\n RPA wants to fund projects that use more sustainable water sources such as:",
+    {{ sideBar("Eligibility", "Your project cannot increase water use from summer abstraction or mains. \n\n RPA wants to fund projects that use more sustainable water sources such as:",
     [
     "winter peak-flow abstraction",
     "rain water harvesting",
