--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -70,7 +70,7 @@
       <div class="govuk-grid-column-two-thirds">
         <br>
         <h2 class="govuk-heading-m">Your answers</h2>
-        <p>You can go back through the checker as many times as you like but you can only submit your details once. Once you’re happy that your answers accurately reflect your project, add your contact details.</p>
+        <p>You can go back to change scoring questions as many times as you like but you can only submit your details once.</p>
 
       <table class="govuk-table govuk-body govuk-!-font-size-16">
         <thead class="govuk-table__head">
