fixed continue button issue

--- a/app/templates/water-source.njk
+++ b/app/templates/water-source.njk
@@ -45,6 +45,7 @@
           {% endif %}
 
           {{ govukCheckboxes(waterSourcePlanned) }}
+          {{ conditionalButtons(false) }}
         </form>
 
 
