timeout wanring adjustment
after 15 mins, warning appears for 5 mins

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -36,9 +36,11 @@
   {% if showTimeout %}  
     {{govukTimeoutWarning({
       "modalIdleTime":sessionTimeoutInMin,
-      "modalVisibleTime":10,
+      "modalVisibleTime":5, 
       "redirectUrl":timeoutPath
     })}}
+           {# change modalVisibleTime this to 15? 5? #}
+
   {% endif %}
 {% endblock %}
 
