updated error message to minutes

--- a/app/templates/session-timeout.njk
+++ b/app/templates/session-timeout.njk
@@ -11,7 +11,7 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds govuk-body">
           <h1 class="govuk-heading-xl">Your session has ended due to inactivity</h1>
-          <p>Your session has ended because you haven’t done anything for over 20 mins.</p>
+          <p>Your session has ended because you haven’t done anything for over 20 minutes.</p>
           <p class="govuk-inset-text">We have deleted all the answers you’ve entered to protect your security.</p>
           {{ govukButton({
             href: startLink,
