--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -11,7 +11,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-body">
-      <h1 class="govuk-heading-l">{{copyprovider(1)}}</h1>
+      <h1 class="govuk-heading-xl">{{copyprovider(1)}}</h1>
       <p>{{copyprovider(2)}}</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>{{copyprovider(3)}}</li>
